# mcp-lrn

./: .gitignore  readme.adoc
echo/: echo-client.py  echo-server.py  pyproject.toml  readme.adoc
github-visual/: claude_desktop_config.json  info.txt  main.py  pyproject.toml  readme.adoc  server.py
gradio-letter-counter/: gradio-client.py  gradio-server.py  pyproject.toml  readme.adoc  server.py
simple-server/: client.py  pyproject.toml  server.py
sql/: db-client.py  db-server.py  init-employees.py  init-users.py  init_employees.py  main.py  pyproject.toml  readme.adoc
tool-poisoning/: client.py  pyproject.toml  readme.adoc  server.py
unsafe/: client.py  readme.adoc  server.py
weather/: pyproject.toml  readme.adoc  server.py
weather/src/cli/: client.py
weather/src/ui/: app.py  get_server_info.py
