[project]
name = "github-visual"
version = "0.1.0"
description = "Add your description here"
readme = "readme.adoc"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "mcp[cli]>=1.9.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"
indent-width = 2
