[project]
name = "unsafe-server"
version = "0.1.0"
description = "Shows a unsafe server that reads a random file from home directory"
readme = "readme.adoc"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.8.1",
    "mcp[cli]>=1.9.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"
indent-width = 2
