[project]
name = "weather-mcp-server"
version = "0.1.0"
description = "Weather MCP Server for retrieving weather information from weatherapi.com"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.8.1",
    "httpx>=0.27.0",
    "mcp[cli]>=1.9.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
indent-width = 2

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

# [tool.ruff.lint]
# select = ["E", "F", "I"]  # Enable error, pyflakes, and import sorting
# fixable = ["ALL"]
# unfixable = []

# [tool.mypy]
# python_version = "3.11"
# warn_return_any = true
# warn_unused_configs = true
# disallow_untyped_defs = true 

